# PeriodicNavierStokes

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
periodicnavierstokes/: __init__.py  periodicnavierstokes.py
periodicnavierstokes/data/: ns_2d.py  preprocess_data.py  random_fields.py
